--- a/web/views/Cotizacion/Cotizacion.xhtml
+++ b/web/views/Cotizacion/Cotizacion.xhtml
@@ -110,7 +110,7 @@
                             </p:column>
                         </p:dataTable>
                         <h:panelGrid id="gridTotalFactura" columns="2" style="font-size: 15px; margin: 0 auto">
-                            <h3>Total Cotizacion</h3> 
+                            <h3>Total Cotización</h3> 
                             <p:outputLabel value="#{cotizacionBean.totalCotizacionFacturaCotizacion}" style="font-size: 27px; margin: 0 auto">
                                 <f:convertNumber type="currency" currencySymbol="$ " minFractionDigits="0"/>
                             </p:outputLabel>
