--- a/web/views/Servicio/Fac-Servicios.xhtml
+++ b/web/views/Servicio/Fac-Servicios.xhtml
@@ -14,8 +14,6 @@
                 <h1></h1>
                 <h3>FACTURAS</h3>
                 <h1></h1>
-                <h6>date format | sin Factura sin Impresora | lock data</h6>
-                <h1></h1>
 
                 <h:form id="formMostrarServicios">
                     <p:dataTable id="tableServicios" value="#{servicioBean.listaServicios}" var="ser" emptyMessage="Sin Registros Guardados" style="align-content:center; margin-left:auto; margin-right:auto; font-style:initial; font-family:sans-serif; font-size:15px" rows="5" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="5,10,15">
@@ -26,7 +24,9 @@
                             <h:outputText value="#{servicioBean.getmostrarPersona(ser.idPersona)}"/>
                         </p:column>
                         <p:column headerText="Fecha" style="text-align:center">
-                            <h:outputText value="#{ser.fechaServicio}"/>
+                            <h:outputText value="#{ser.fechaServicio}">
+                                <f:convertDateTime pattern="dd/MM/yyyy HH:mm:ss" timeZone="America/Bogota" />
+                            </h:outputText>
                         </p:column>
                         <p:column headerText="VaLor" style="text-align:center">
                             <p:outputLabel value="#{ser.totalServicio}">
@@ -34,7 +34,7 @@
                             </p:outputLabel>
                         </p:column>
                         <p:column headerText="Imprimir" style="text-align:center; font-size:13px">
-                            <p:commandButton value="#{ser.estadoServicio eq '0' ? 'Factura' : 'Sin Factura'}" action="#{servicioBean.enableModificarServicio()}" oncomplete="PF('dialogModificarServicio').show();" update=":formModificarServicio" style="text-align:center; font-size:11px">
+                            <p:commandButton value="#{ser.estadoServicio eq '0' ? 'Factura' : 'Sin Factura'}" action="#{servicioBean.enableModificarServicio()}" oncomplete="PF('dialogModificarServicio').show();" update=":formImprimirServicio" style="text-align:center; font-size:11px">
                                 <f:param name="idServicioi" value="#{ser.idServicio}"/>
                                 <f:param name="estServicioi" value="#{ser.estadoServicio}"/>
                             </p:commandButton>
@@ -42,7 +42,7 @@
                     </p:dataTable>
                 </h:form>
 
-                <h:form id="formModificarServicio">
+                <h:form id="formImprimirServicio">
                     <p:growl id="mensajesServicio" autoUpdate="true" showDetail="true" life="1500"/>
                     <p:dialog id="dlgModificarServicio" header="Información Servicio" widgetVar="dialogModificarServicio" modal="true" resizable="true" showEffect="explode" hideEffect="explode" style="text-align:center">
                         <p:layout id="layoutFacturaServicio" style="width: 100%; height: 52px">
@@ -77,7 +77,7 @@
                         <h:panelGrid id="gridBuscarServicio" columns="1">
                             <p:outputLabel value="Observación" style="font-size: 16px; font-weight: bold"/>
                             <p:inputText id="inpTexObservacion" value="#{servicioBean.servicio.observacionServicio}" size="118" placeholder="Ingrese Observación" disabled="#{!servicioBean.enabled}" style="text-align: center; text-transform: uppercase"></p:inputText>
-                            <p:commandButton value="Valido SÓLO para Imprimir Facturas" disabled="#{!servicioBean.enabled}"/>
+                            <p:commandButton value="Valido únicamente para Imprimir Facturas" disabled="#{!servicioBean.enabled}"/>
                         </h:panelGrid>
                         <p:dataTable id="tableProductoFacturaModificada" editable="true" value="#{servicioBean.listaDetalleServicio}" var="pro" rowIndexVar="rowIndex">
                             <p:column headerText="Código">
@@ -104,15 +104,15 @@
                             </p:column>
                         </p:dataTable>
                         <h:panelGrid id="gridTotalFactura" columns="2" style="font-size: 15px; margin: 0 auto">
-                            <h6>TOTAL SERVICIO</h6>
+                            <h6>Total Servicio</h6>
                             <p:outputLabel value="#{servicioBean.totalServicioFacturaServicio}" style="font-size: 27px; margin: 0 auto">
                                 <f:convertNumber type="currency" currencySymbol="$ " minFractionDigits="0"/>
                             </p:outputLabel>
                         </h:panelGrid>
                         <h6></h6>                        
-                        <h:commandLink id="linkImprimir" actionListener="#{servicioBean.reporteImpresionFacturaServicioModificado(servicioBean.servicio.idServicio)}" target="_blank"><p:graphicImage url="/imgs/imprimirIcono.png"/></h:commandLink>
+                        <h:commandLink id="linkImprimir" actionListener="#{servicioBean.reporteImpresionFacturaServicioModificado(servicioBean.servicio.idServicio)}" target="_blank" disabled="#{!servicioBean.disabled}"><p:graphicImage url="/imgs/imprimirIcono.png"/></h:commandLink>
                     </p:dialog>
-                    
+
                 </h:form>    
 
             </ui:define>
@@ -120,5 +120,5 @@
         </ui:composition>
 
     </body>
-    
+
 </html>
