--- a/web/views/Servicio/Fac-Servicios.xhtml
+++ b/web/views/Servicio/Fac-Servicios.xhtml
@@ -12,7 +12,7 @@
 
             <ui:define name="content">
                 <h1></h1>
-                <h3>FACTURAS</h3>
+                <h3>SERVICIOS</h3>
                 <h1></h1>
 
                 <h:form id="formMostrarServicios">
