estructuración Buscador de Facturas de Venta

--- a/web/template/HomeTemplate.xhtml
+++ b/web/template/HomeTemplate.xhtml
@@ -77,7 +77,7 @@
                     <p:menuitem value="Motos" outcome="/views/Moto/Moto" icon="ui-icon-refresh" />
                     <p:menuitem value="Servicio" outcome="/views/Servicio/Servicio" icon="ui-icon-refresh" />
                     <p:menuitem value="Mecanicos" outcome="/views/Mecanico/Mecanico" icon="ui-icon-refresh" />
-                    <p:menuitem value="Remisiones" outcome="/views/Servicio/Fac-Servicios" icon="ui-icon-refresh" />
+                    <p:menuitem value="Servicios" outcome="/views/Servicio/Fac-Servicios" icon="ui-icon-refresh" />
                 </p:submenu>
                 
                 <p:submenu label="Categorias" icon="ui-icon-gear">
