--- a/web/views/Servicio/Servicio.xhtml
+++ b/web/views/Servicio/Servicio.xhtml
@@ -12,7 +12,7 @@
 
             <ui:define name="content">
                 <h1></h1>
-                <h3>SERVICIOS</h3>
+                <h3>SERVICIO</h3>
                 <h3></h3>
                 <h:form>
                     <h:panelGrid width="1313px" style="margin: 0 auto;">
