--- a/web/views/Venta/Fac-Ventas.xhtml
+++ b/web/views/Venta/Fac-Ventas.xhtml
@@ -23,7 +23,7 @@
 
                 <script>
                     $(document).ready(function () {
-                        $("td").each(function () {
+                        $("table td").each(function () {
                             var textotd = $(this).text();
                             if ($.trim(textotd) === '0') {
                                 $(this).parent().hide();
@@ -33,7 +33,7 @@
                 </script>
                 
                 <h:form id="formMostrarVentas">
-                    <p:dataTable id="tableVentas" value="#{ventaBean.listaVentas}" var="ven" emptyMessage="Sin Registros Guardados" style="align-content:center; margin-left:auto; margin-right:auto; font-style:initial; font-family:sans-serif; font-size:15px" rows="5" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="5,10,15">
+                    <p:dataTable id="tableVentas" value="#{ventaBean.listaVentas}" var="ven" emptyMessage="Sin Registros Guardados" style="align-content:center; margin-left:auto; margin-right:auto; font-style:initial; font-family:sans-serif; font-size:15px" rows="1" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="1">
                         <p:column headerText="C.C CLiente" filterBy="#{ven.idPersona}" filterStyle="width:150px; text-align:center" filterMatchMode="contains" style="text-align:center; width:180px">
                             <h:outputText value="#{ven.idPersona}"/>
                         </p:column>
