--- a/web/reportes/reporteFacturaVenta.jrxml
+++ b/web/reportes/reporteFacturaVenta.jrxml
@@ -14,7 +14,7 @@
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT
-	identificacionPersona,
+	identificacionPersona, numeracionFactura,
 	 CONCAT(p.nombresPersona," ",p.apellidosPersona) AS datosPersona,
 	 CONCAT(p.direccionPersona," ",p.telefonoPersona) AS referenciasPersona,
 	 CONCAT(e.nombresEmpleado," ",e.apellidosEmpleado) AS datosEmpleado, 
@@ -22,11 +22,14 @@
 FROM
 	detalleVenta AS dv
 INNER JOIN Venta AS v ON v.idVenta=dv.idVenta
-INNER JOIN Persona  AS p ON p.idPersona=v.idPersona
-INNER JOIN Empleado  AS e ON e.idEmpleado=v.idEmpleado
+INNER JOIN Persona AS p ON p.idPersona=v.idPersona
+INNER JOIN Empleado AS e ON e.idEmpleado=v.idEmpleado
 WHERE  dv.idVenta=$P{idVenta}]]>
 	</queryString>
 	<field name="identificacionPersona" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="numeracionFactura" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="datosPersona" class="java.lang.String"/>
@@ -50,7 +53,7 @@ WHERE  dv.idVenta=$P{idVenta}]]>
 	<field name="valorVentaProducto" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="IVA" class="java.lang.String">
+	<field name="IVA" class="java.lang.Double">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="unidadesVendidas" class="java.lang.Integer">
@@ -59,8 +62,17 @@ WHERE  dv.idVenta=$P{idVenta}]]>
 	<field name="totalDetalleVenta" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<variable name="totalVenta" class="java.math.BigDecimal" calculation="Sum">
+	<variable name="subTotal" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{totalDetalleVenta}-$F{IVA}*$F{totalDetalleVenta}*0.19]]></variableExpression>
+	</variable>
+	<variable name="totalIva" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{totalDetalleVenta}*0.19*$F{IVA}]]></variableExpression>
+	</variable>
+	<variable name="totalVenta" class="java.lang.Number" calculation="Sum">
 		<variableExpression><![CDATA[$F{totalDetalleVenta}]]></variableExpression>
+	</variable>
+	<variable name="ivaUnitario" class="java.lang.Double">
+		<variableExpression><![CDATA[$F{IVA}*$F{totalDetalleVenta}*0.19]]></variableExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
@@ -75,8 +87,8 @@ WHERE  dv.idVenta=$P{idVenta}]]>
 				<text><![CDATA[REGIMEN SIMPLIFICADO]]></text>
 			</staticText>
 			<image>
-				<reportElement x="72" y="5" width="123" height="108" uuid="973ea03b-ce3a-451c-86c1-37817b5629ce"/>
-				<imageExpression><![CDATA["/Users/csrsto/Documents/Apps/GreenApps-Demo/web/imgs/GreenApps.png"]]></imageExpression>
+				<reportElement x="63" y="1" width="140" height="114" uuid="7e449e91-610f-47f8-ba49-4a8c5420947d"/>
+				<imageExpression><![CDATA["/Users/csrsto/Downloads/GreenApps/reportesdeutilidades/web/imgs/GreenApps.jpg"]]></imageExpression>
 			</image>
 		</band>
 	</title>
@@ -86,7 +98,7 @@ WHERE  dv.idVenta=$P{idVenta}]]>
 				<reportElement x="7" y="2" width="252" height="74" uuid="713a8413-3ba7-4671-bb1c-b7bd72c2589f"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="125" y="2" width="46" height="20" uuid="cc66653a-0a49-4922-a2d7-21cbba95a0ac"/>
+				<reportElement x="111" y="2" width="46" height="20" uuid="cc66653a-0a49-4922-a2d7-21cbba95a0ac"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 				</textElement>
@@ -121,14 +133,14 @@ WHERE  dv.idVenta=$P{idVenta}]]>
 				<textFieldExpression><![CDATA[$F{referenciasPersona}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="70" y="78" width="55" height="15" uuid="67750e2a-5077-4028-81d1-e47019d2dfe5"/>
+				<reportElement x="54" y="78" width="55" height="15" uuid="67750e2a-5077-4028-81d1-e47019d2dfe5"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Producto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="29" y="1" width="61" height="20" uuid="c7be01e0-3e79-45f3-9586-9e89211bbb56"/>
+				<reportElement x="20" y="2" width="61" height="20" uuid="c7be01e0-3e79-45f3-9586-9e89211bbb56"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 				</textElement>
@@ -142,23 +154,23 @@ WHERE  dv.idVenta=$P{idVenta}]]>
 				<text><![CDATA[Facturó:]]></text>
 			</staticText>
 			<textField pattern="dd-MMM-yy">
-				<reportElement x="166" y="2" width="70" height="20" uuid="9997d0e7-3852-4e64-aa0b-69f7a8eaa0a7"/>
+				<reportElement x="148" y="2" width="70" height="20" uuid="9997d0e7-3852-4e64-aa0b-69f7a8eaa0a7"/>
 				<textElement verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="10" y="78" width="53" height="15" uuid="b4e39254-03f5-4389-807b-c26031f74685"/>
+				<reportElement x="2" y="78" width="53" height="15" uuid="b4e39254-03f5-4389-807b-c26031f74685"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Unidades]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="222" y="78" width="33" height="15" uuid="77df00bf-6865-4eff-b2ec-edd57be2b8c6"/>
+				<reportElement x="224" y="78" width="33" height="15" uuid="77df00bf-6865-4eff-b2ec-edd57be2b8c6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total]]></text>
 			</staticText>
@@ -170,77 +182,132 @@ WHERE  dv.idVenta=$P{idVenta}]]>
 				<text><![CDATA[Dirección & Teléfono:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="134" y="78" width="77" height="15" uuid="de95d648-149a-4382-a707-974e3522cd1a"/>
+				<reportElement x="108" y="78" width="77" height="15" uuid="de95d648-149a-4382-a707-974e3522cd1a"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Valor Unitario]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="96" y="2" width="89" height="19" uuid="dedec60a-188f-45a9-9782-a5cccf432254"/>
-				<textElement textAlignment="Justified" verticalAlignment="Middle">
+				<reportElement x="84" y="2" width="40" height="19" uuid="dedec60a-188f-45a9-9782-a5cccf432254"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{identificacionPersona}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="159" y="78" width="77" height="15" uuid="533cec37-3451-492a-81fe-a4b21c2c2dfa"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Iva]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="190" y="2" width="38" height="20" uuid="93eff2ac-eb68-4124-a0e6-fe50483eb00f"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Factura:]]></text>
+			</staticText>
+			<textField pattern="###0">
+				<reportElement x="217" y="2" width="47" height="20" uuid="cd96c64a-ffd4-498f-8063-4f405e583c17"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{numeracionFactura}]]></textFieldExpression>
+			</textField>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="30" splitType="Stretch">
+		<band height="24" splitType="Stretch">
 			<textField>
-				<reportElement x="24" y="2" width="21" height="13" uuid="d109b7d7-5ce4-4686-8620-badb16aa16c9"/>
+				<reportElement x="15" y="2" width="21" height="13" uuid="d109b7d7-5ce4-4686-8620-badb16aa16c9"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{unidadesVendidas}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="53" y="2" width="87" height="27" uuid="e623d34d-311e-4f75-a653-bb27c89a55be"/>
+				<reportElement x="37" y="-5" width="87" height="28" uuid="e623d34d-311e-4f75-a653-bb27c89a55be"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreProducto}]]></textFieldExpression>
 			</textField>
 			<textField pattern="$ #,##0">
-				<reportElement x="146" y="2" width="53" height="13" uuid="33ea9f19-f91b-4c91-aaff-7865e0e53505"/>
+				<reportElement x="117" y="3" width="53" height="13" uuid="33ea9f19-f91b-4c91-aaff-7865e0e53505"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{valorVentaProducto}]]></textFieldExpression>
 			</textField>
 			<textField pattern="$ #,##0">
-				<reportElement x="210" y="2" width="55" height="15" uuid="0e9444d5-f3f9-4278-a600-6b1a0979030b"/>
+				<reportElement x="212" y="3" width="55" height="13" uuid="0e9444d5-f3f9-4278-a600-6b1a0979030b"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{totalDetalleVenta}]]></textFieldExpression>
 			</textField>
+			<textField pattern="$ #,##0">
+				<reportElement x="164" y="3" width="66" height="13" uuid="f035533e-3e87-4e67-b9a8-9fc7ac6d3500"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{ivaUnitario}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<summary>
-		<band height="104" splitType="Stretch">
+		<band height="127" splitType="Stretch">
 			<rectangle radius="10">
-				<reportElement x="79" y="2" width="168" height="14" uuid="eea23eba-ab34-4a9e-8874-8a80c25edf3e"/>
+				<reportElement x="111" y="-1" width="144" height="46" uuid="04dd6707-a4ab-40d5-b9c2-8a4a79ebfa8c"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="77" y="2" width="83" height="15" uuid="750d8049-79af-4ce1-9f1f-e25e560f2b4d"/>
+				<reportElement x="108" y="-2" width="83" height="15" uuid="750d8049-79af-4ce1-9f1f-e25e560f2b4d"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[Total Venta:]]></text>
+				<text><![CDATA[Subtotal:]]></text>
 			</staticText>
-			<line>
-				<reportElement x="7" y="20" width="252" height="1" uuid="4a5b0f6b-f3d1-4d1b-bd8f-28e022e4a1d3"/>
-			</line>
 			<staticText>
-				<reportElement x="19" y="26" width="236" height="76" uuid="b708b58a-6072-49a3-8fd9-1c754871260b"/>
+				<reportElement x="18" y="50" width="236" height="76" uuid="b708b58a-6072-49a3-8fd9-1c754871260b"/>
 				<textElement textAlignment="Center">
 					<font fontName="SansSerif" size="8"/>
 				</textElement>
 				<text><![CDATA[Es obligatorio presentar esta Factura Original para efectos de reclamos y garantías de Accesorios y Repuestos. Pasados 30 días no se aceptan devoluciones ni productos en mal estado o incompletos. La garantía en llantas es de tres meses por defectos de fabricación, no se aceptan llantas parchadas o con daños producidos por terceros. La garantía en baterías es de dos meses por descargas o defectos de fabricación. Partes electricas no tienen garantía. ]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="108" y="14" width="83" height="15" uuid="943671bd-9fc6-4cc2-b8dd-a13534cd221d"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Iva:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="108" y="30" width="83" height="15" uuid="9eb86d09-75c1-4fb5-8a2a-141dc6c6fe84"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total Venta:]]></text>
+			</staticText>
 			<textField pattern="$ #,##0">
-				<reportElement x="154" y="1" width="87" height="15" uuid="95161696-7b31-432a-8870-aa3373fb9cac"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<reportElement x="165" y="30" width="72" height="15" uuid="e0cff0c5-954a-4b94-816e-cd6b19edd01c"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$V{totalVenta}]]></textFieldExpression>
+			</textField>
+			<textField pattern="$ #,##0">
+				<reportElement x="165" y="14" width="72" height="15" uuid="5394d952-e430-4cc0-979d-b317a058cb2e"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{totalIva}]]></textFieldExpression>
+			</textField>
+			<textField pattern="$ #,##0">
+				<reportElement x="165" y="-1" width="72" height="14" uuid="5834ecb3-510b-4219-904d-30bfb83c241c"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{subTotal}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
