--- a/web/views/Devolucion/Devolucion.xhtml
+++ b/web/views/Devolucion/Devolucion.xhtml
@@ -52,7 +52,7 @@
                             </p:layoutUnit>
                             <p:layoutUnit id="layoutNumeroFactura" position="east" style=" padding: 15px; text-align: center; font-size: 33px" size="150">
                                 <h:panelGrid columns="1" style="font-size: 30px; font-weight: normal; margin-top: 30px; margin: 0 auto">
-                                    <h6>Green Apps</h6>
+                                    <h6>GreenApps</h6>
                                 </h:panelGrid>
                             </p:layoutUnit>
                         </p:layout>
@@ -107,7 +107,7 @@
                             </p:column>
                         </p:dataTable>
                         <h:panelGrid id="gridTotalFactura" columns="2" style="font-size: 15px; margin: 0 auto">
-                            <h3>Total Devolucion</h3> 
+                            <h3>Total Devolución</h3> 
                             <p:outputLabel value="#{devolucionBean.totalDevolucionFacturaDevolucion}" style="font-size: 27px; margin: 0 auto">
                                 <f:convertNumber type="currency" currencySymbol="$ " minFractionDigits="0"/>
                             </p:outputLabel>
@@ -171,7 +171,7 @@
                                 </p:outputLabel>
                             </p:column>
                             <p:column headerText="IVA" style="text-align:center">
-                                <h:outputText value="#{pro.iva}"/>
+                                <h:outputText value="#{pro.iva eq '0' ? 'No' : 'Si'}"/>
                             </p:column>
                             <p:column headerText="Categoría" style="text-align:center">
                                 <h:outputText value="#{productoBean.getmostrarCategoria(pro.idCategoria)}"/>
