--- a/web/reportes/reporteUtilidades.jrxml
+++ b/web/reportes/reporteUtilidades.jrxml
@@ -10,7 +10,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT GreenAppsDemo.Producto.codigoProducto,valorCompraProducto, GreenAppsDemo.detalleVenta.* FROM Producto 
+		<![CDATA[SELECT greenappsdemo.Producto.codigoProducto, valorCompraProducto, greenappsdemo.detalleVenta.* FROM Producto 
 INNER JOIN detalleVenta ON Producto.idProducto = detalleVenta.idProducto 
 INNER JOIN Venta ON detalleVenta.idVenta=Venta.idVenta 
 WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
@@ -18,10 +18,10 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 	<field name="codigoProducto" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="valorCompraProducto" class="java.lang.Double">
+	<field name="valorCompraProducto" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="iddetalleVenta" class="java.lang.Integer">
+	<field name="idDetalleVenta" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="idVenta" class="java.lang.Integer">
@@ -36,13 +36,16 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 	<field name="valorVentaProducto" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="IVA" class="java.lang.String">
+	<field name="IVA" class="java.lang.Boolean">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="totalIva" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="unidadesVendidas" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="totaldetalleVenta" class="java.lang.Float">
+	<field name="totalDetalleVenta" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<variable name="totalVenta" class="java.lang.Double" calculation="Sum">
@@ -52,10 +55,13 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 		<variableExpression><![CDATA[$F{valorCompraProducto}*$F{unidadesVendidas}]]></variableExpression>
 	</variable>
 	<variable name="utilidad" class="java.lang.Double">
-		<variableExpression><![CDATA[$V{totalVenta}-$V{totalCompra}]]></variableExpression>
+		<variableExpression><![CDATA[$V{totalVenta}-$V{totalCompra}-$V{totalIva}]]></variableExpression>
 	</variable>
-	<variable name="utilidadUnitaria" class="java.lang.Double">
-		<variableExpression><![CDATA[($F{valorVentaProducto}-$F{valorCompraProducto})*$F{unidadesVendidas}]]></variableExpression>
+	<variable name="utilidadUnitaria" class="java.lang.Float">
+		<variableExpression><![CDATA[($F{valorVentaProducto}-$F{valorCompraProducto})*$F{unidadesVendidas}-$F{totalIva}]]></variableExpression>
+	</variable>
+	<variable name="totalIva" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{totalIva}*$F{unidadesVendidas}]]></variableExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
@@ -81,11 +87,11 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 				<text><![CDATA[Código Producto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="321" y="5" width="124" height="20" uuid="3a022e7b-d8c9-475d-bece-5ef0d2ef39cd"/>
+				<reportElement x="281" y="5" width="78" height="20" uuid="3a022e7b-d8c9-475d-bece-5ef0d2ef39cd"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Valor Compra Producto]]></text>
+				<text><![CDATA[Vlr Cpa Pdcto]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="446" y="5" width="108" height="20" uuid="0fec8128-6419-4370-9a66-59724cee24cc"/>
@@ -95,11 +101,11 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 				<text><![CDATA[Utilidad Unitaria]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="200" y="5" width="118" height="20" uuid="55a8a533-718b-471c-a300-b21b999ab4cb"/>
+				<reportElement x="200" y="5" width="77" height="20" uuid="55a8a533-718b-471c-a300-b21b999ab4cb"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[Valor Venta Producto]]></text>
+				<text><![CDATA[Vlr Vta Pdcto]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="98" y="5" width="100" height="20" uuid="63fc591a-7072-441d-a602-52da51ce885c"/>
@@ -107,6 +113,13 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre Producto]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="359" y="5" width="87" height="20" uuid="d53705ef-3541-4f42-bb2e-1f26cca9ee60"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[IVA]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -118,8 +131,8 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 				<textFieldExpression><![CDATA[$F{codigoProducto}]]></textFieldExpression>
 			</textField>
 			<textField pattern="$ #,##0">
-				<reportElement x="265" y="4" width="134" height="20" uuid="519f1d5b-47ec-404f-ac00-05e16c25fdf0"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<reportElement x="270" y="4" width="90" height="20" uuid="519f1d5b-47ec-404f-ac00-05e16c25fdf0"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{valorCompraProducto}]]></textFieldExpression>
 			</textField>
 			<textField>
@@ -128,14 +141,19 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 				<textFieldExpression><![CDATA[$F{nombreProducto}]]></textFieldExpression>
 			</textField>
 			<textField pattern="$ #,##0">
-				<reportElement x="422" y="4" width="100" height="20" forecolor="#00CC00" uuid="d5f63765-7333-4426-ba79-1eaa72d57f62"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{utilidadUnitaria}]]></textFieldExpression>
+				<reportElement x="183" y="4" width="97" height="20" uuid="35c4a635-453f-4b8f-adff-44a2912a6ace"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{valorVentaProducto}]]></textFieldExpression>
 			</textField>
 			<textField pattern="$ #,##0">
-				<reportElement x="135" y="4" width="142" height="20" uuid="35c4a635-453f-4b8f-adff-44a2912a6ace"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{valorVentaProducto}]]></textFieldExpression>
+				<reportElement x="351" y="4" width="100" height="20" uuid="0d662ce6-f9bd-47d5-9a7b-9df4fd537329"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{totalIva}]]></textFieldExpression>
+			</textField>
+			<textField pattern="$ #,##0">
+				<reportElement x="449" y="4" width="100" height="20" uuid="300f414a-dc3d-4a39-a620-75905d398921"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{utilidadUnitaria}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -143,43 +161,55 @@ WHERE fechaVenta BETWEEN $P{fechaInicialUtilidad} AND $P{fechaFinalUtilidad}]]>
 		<band height="25" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="64" splitType="Stretch">
+		<band height="85" splitType="Stretch">
 			<staticText>
 				<reportElement x="316" y="3" width="100" height="20" uuid="cd432de5-14a2-4b97-9940-f942d3956b4f"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total Venta:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="316" y="23" width="100" height="20" uuid="0338faf4-f5d5-47c6-8d76-de89244653f9"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total Compra:]]></text>
 			</staticText>
-			<textField pattern="$ #,##0">
-				<reportElement x="422" y="3" width="100" height="20" uuid="775a30ce-2da2-452c-9e1d-a7e2cd36b190"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{totalVenta}]]></textFieldExpression>
-			</textField>
-			<textField pattern="$ #,##0">
-				<reportElement x="422" y="23" width="100" height="20" uuid="ce1b42a6-c77d-40b9-ba49-832e4352b72e"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{totalCompra}]]></textFieldExpression>
-			</textField>
-			<textField pattern="$ #,##0">
-				<reportElement x="422" y="41" width="100" height="20" forecolor="#00CC33" uuid="b81b8ff3-8e7d-4f87-be45-ee84da3e3081"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{utilidad}]]></textFieldExpression>
-			</textField>
 			<staticText>
-				<reportElement x="316" y="41" width="100" height="20" uuid="37204436-85ce-411e-968f-d75d3bd90db1"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<reportElement x="316" y="61" width="100" height="20" uuid="37204436-85ce-411e-968f-d75d3bd90db1"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total Utilidad:]]></text>
 			</staticText>
+			<textField pattern="$ #,##0">
+				<reportElement x="433" y="3" width="100" height="20" uuid="df908995-307d-4243-8798-60ac48ee8304"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{totalVenta}]]></textFieldExpression>
+			</textField>
+			<textField pattern="$ #,##0">
+				<reportElement x="433" y="23" width="100" height="20" uuid="ef6804a8-649a-4431-bee5-6b4829a0a5ef"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{totalCompra}]]></textFieldExpression>
+			</textField>
+			<textField pattern="$ #,##0">
+				<reportElement x="433" y="61" width="100" height="20" uuid="e7d8cf77-7318-43cf-8cab-2e8d7f5f4334"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{utilidad}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="316" y="43" width="100" height="20" uuid="c80595ef-cabf-4f03-95d9-c2a1bd8ce55c"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total Iva:]]></text>
+			</staticText>
+			<textField pattern="$ #,##0">
+				<reportElement x="433" y="43" width="100" height="20" uuid="9d8ad2e9-9e3c-4630-bc4b-3cb49e1b7cb8"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{totalIva}]]></textFieldExpression>
+			</textField>
 		</band>
 	</summary>
 </jasperReport>
