--- a/web/reportes/reporteFacturaCompra.jrxml
+++ b/web/reportes/reporteFacturaCompra.jrxml
@@ -64,8 +64,8 @@
 				<text><![CDATA[REGIMEN SIMPLIFICADO]]></text>
 			</staticText>
 			<image>
-				<reportElement x="75" y="8" width="121" height="103" uuid="8d0a3b32-9cc3-4967-9806-6e7bb8b49f1e"/>
-				<imageExpression><![CDATA["/Users/csrsto/Documents/Apps/GreenApps-Demo/web/imgs/GreenApps.png"]]></imageExpression>
+				<reportElement x="67" y="6" width="138" height="106" uuid="5e7623ed-f195-43fe-ae54-aa41b964d5e2"/>
+				<imageExpression><![CDATA["/Users/csrsto/Downloads/GreenApps/GreenApps/web/imgs/GreenApps.jpg"]]></imageExpression>
 			</image>
 		</band>
 	</title>
